--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="monetag" content="3f4a95cc074eb6d7d7f38254451df209">
     <title>Mon Site de Pubs</title>
     <link rel="stylesheet" href="style.css">
 </head>
